fix: navigation ios

--- a/src/app/home/home.component.styl
+++ b/src/app/home/home.component.styl
@@ -1,6 +1,9 @@
 meditation.hidden, question.hidden, message.hidden
   display: none !important
 
+.tabs .highlight /deep/ .md-button-focus-overlay
+  opacity: 1
+
 .component-separator
   margin-top: 10px
 
